fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,9 @@ video {
 	bottom: 0px;
 	left: 0px;
 	right: 0px;
-	z-index: 100;
 	background-color: #777;
 	background-color: rgba(119,119,119, .7);
+	z-index: 1000;
 }
 
 #videoplayer_outer_container {
@@ -30,7 +30,7 @@ video {
 	color: #4d4d4d;
 	background: #fff;
 	box-shadow: 0 0 20px #111;
-	z-index: 101;
+	z-index: 1001;
 }
 
 #videoplayer_container:before {
